fix: #696 z-index of ordering control

--- a/assets/css/customizer-style.css
+++ b/assets/css/customizer-style.css
@@ -448,6 +448,7 @@
 	-ms-flex-pack: center;
 	-webkit-justify-content: center;
 	justify-content: center;
+	z-index: 1;
 }
 
 .ti-order-sortable li.enabled {
